[package]
name = "md-slide-rs"
version = "0.1.0"
authors = ["HipsterBrown <headhipster@hipsterbrown.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
pulldown-cmark = "0.7"

[dependencies.tera]
version = "1"
default-features = false
